--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 
 <body>
     <header id="header">
-        <img src="/Images/logo/hsd-icon.svg" class="logo">
+        <img src="Images/logo/hsd-icon.svg" class="logo">
         <ul class="menu">
             <li class="item" data-href="/home.html">Inicio</li>
             <li class="item" data-href="/menu-items/habs.html">Habitaciones</li>
@@ -31,19 +31,19 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/Images/slides/slide-1.JPG" class="d-block w-100 mx-auto" alt="...">
+                <img src="Images/slides/slide-1.JPG" class="d-block w-100 mx-auto" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Donde el amor se encuentra con la intimidad, nacen los momentos más inolvidables.</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/Images/slides/slide-2.JPG" class="d-block w-100 mx-auto" alt="...">
+                <img src="Images/slides/slide-2.JPG" class="d-block w-100 mx-auto" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>En nuestras habitaciones, la pasión se convierte en poesía y la noche en un cuento de amor.</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/Images/slides/slide-3.JPG" class="d-block w-100 mx-auto" alt="...">
+                <img src="Images/slides/slide-3.JPG" class="d-block w-100 mx-auto" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Aquí, el tiempo se detiene y el deseo se despierta. Bienvenidos al paraíso del amor.</h5>
                 </div>
