--- a/home.html
+++ b/home.html
@@ -16,10 +16,10 @@
     <header id="header">
         <img src="Images/logo/hsd-icon.svg" class="logo">
         <ul class="menu">
-            <li class="item" data-href="/home.html">Inicio</li>
-            <li class="item" data-href="/menu-items/habs.html">Habitaciones</li>
-            <li class="item" data-href="/menu-items/servicios.html">Servicios</li>
-            <li class="item" data-href="/menu-items/contacto.html">Contacto</li>
+            <li class="item" data-href="/Teclab_Project/home.html">Inicio</li>
+            <li class="item" data-href="/Teclab_Project/menu-items/habs.html">Habitaciones</li>
+            <li class="item" data-href="/Teclab_Project/menu-items/servicios.html">Servicios</li>
+            <li class="item" data-href="/Teclab_Project/menu-items/contacto.html">Contacto</li>
         </ul>
     </header>
     <nav>
@@ -74,13 +74,13 @@
             </p>
           </div>
           <div class="image-container-1">
-            <img src="/Images/home/home (1).JPG">
+            <img src="Images/home/home (1).JPG">
           </div>
         </div>
 
         <div class="section-2"> 
           <div class="image-container-2">
-            <img src="/Images/home/home (2).JPG">
+            <img src="Images/home/home (2).JPG">
           </div>
           <div class="text-container-2">
             <p>
