--- a/menu-items/habs.html
+++ b/menu-items/habs.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel San Diego </title>
     <link rel="icon" href="../Images/logo/hsd-icon.svg" type="image/png">
-    <link rel="stylesheet" href="/menu-items/habs.css">
+    <link rel="stylesheet" href="habs.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
@@ -28,7 +28,7 @@
             <ul class="room-grid">
                 <li>
                     <div class="room" data-room-type="Nupcial">
-                        <img src="/Images/Habitaciones/Nupcial/nupcial (1).jpg" alt="Habitación Nupcial">
+                        <img src="../Images/Habitaciones/Nupcial/nupcial (1).jpg" alt="Habitación Nupcial">
                         <p>Nupcial</p>
                     </div>
                 </li>
