--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel San Diego </title>
-    <link rel="icon" href="/Images/logo/hsd-icon.svg" type="image/png">
+    <link rel="icon" href="Images/logo/hsd-icon.svg" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -102,13 +102,13 @@
                   <div class="col-sm-6 col-md-4 item">
                     <h3>Nosotros</h3>
                     <ul>
-                        <li><a href="/menu-items/habs.html">Habitaciones</a></li>
-                        <li><a href="/menu-items/servicios.html">Servicios</a></li>
-                        <li><a href="/menu-items/contacto.html">Contacto</a></li>
+                        <li><a href="/Teclab_Project/menu-items/habs.html">Habitaciones</a></li>
+                        <li><a href="/Teclab_Project/menu-items/servicios.html">Servicios</a></li>
+                        <li><a href="/Teclab_Project/menu-items/contacto.html">Contacto</a></li>
                     </ul>
                   </div>
                   <div class="col-sm-6 col-md-4 item">
-                      <a href="/menu-items/contacto.html"> 
+                      <a href="/Teclab_Project/menu-items/contacto.html"> 
                         <h3>Ubicación</h3>
                         <p>
                           Av. Don Julio Centeno, Zona Industrial Castillito, 
