--- a/menu-items/habs.html
+++ b/menu-items/habs.html
@@ -15,10 +15,10 @@
     <header id="header">
         <img src="../Images/logo/hsd-icon.svg" class="logo">
         <ul class="menu">
-            <li class="item" data-href="/home.html">Inicio</li>
-            <li class="item" data-href="/menu-items/habs.html">Habitaciones</li>
-            <li class="item" data-href="/menu-items/servicios.html">Servicios</li>
-            <li class="item" data-href="/menu-items/contacto.html">Contacto</li>
+            <li class="item" data-href="/Teclab_Project/home.html">Inicio</li>
+            <li class="item" data-href="/Teclab_Project/menu-items/habs.html">Habitaciones</li>
+            <li class="item" data-href="/Teclab_Project/menu-items/servicios.html">Servicios</li>
+            <li class="item" data-href="/Teclab_Project/menu-items/contacto.html">Contacto</li>
         </ul>
     </header>
 
@@ -34,61 +34,61 @@
                 </li>
                 <li>
                     <div class="room" data-room-type="Náutica">
-                        <img src="/Images/Habitaciones/Nautica/nautica (1).png" alt="Habitación Náutica">
+                        <img src="../Images/Habitaciones/Nautica/nautica (1).png" alt="Habitación Náutica">
                         <p>Náutica</p>
                     </div>
                 </li>
                 <li>
                     <div class="room" data-room-type="Familiar">
-                        <img src="/Images/Habitaciones/Familiar/familiar (1).jpg" alt="Habitación Familiar">
+                        <img src="../Images/Habitaciones/Familiar/familiar (1).jpg" alt="Habitación Familiar">
                         <p>Familiar</p>
                     </div>
                 </li>
                 <li>
                     <div class="room" data-room-type="Oriental">
-                        <img src="/Images/Habitaciones/Oriental/oriental (1).png" alt="Habitación Oriental">
+                        <img src="../Images/Habitaciones/Oriental/oriental (1).png" alt="Habitación Oriental">
                         <p>Oriental</p>
                     </div>
                 </li>
                 <li>
                     <div class="room" data-room-type="Oasis">
-                        <img src="/Images/Habitaciones/Oasis/oasis (1).jpg" alt="Habitación Oasis">
+                        <img src="../Images/Habitaciones/Oasis/oasis (1).jpg" alt="Habitación Oasis">
                         <p>Oasis</p>
                     </div>
                 </li>
                 <li>
                     <div class="room" data-room-type="Nova">
-                        <img src="/Images/Habitaciones/Nova/nova (1).jpg" alt="Habitación Nova">
+                        <img src="../Images/Habitaciones/Nova/nova (1).jpg" alt="Habitación Nova">
                         <p>Nova</p>
                     </div>
                 </li>
                 <li>
                     <div class="room" data-room-type="Salvaje">
-                        <img src="/Images/Habitaciones/Salvaje/salvaje (4).jpg" alt="Habitación Salvaje">
+                        <img src="../Images/Habitaciones/Salvaje/salvaje (4).jpg" alt="Habitación Salvaje">
                         <p>Salvaje</p>
                     </div>
                 </li>
                 <li>
                     <div class="room" data-room-type="Mistyka">
-                        <img src="/Images/Habitaciones/Mistyka/mistyka (1).jpg" alt="Habitación Mistyka">
+                        <img src="../Images/Habitaciones/Mistyka/mistyka (1).jpg" alt="Habitación Mistyka">
                         <p>Mistyka</p>
                     </div>
                 </li>
                 <li>
                     <div class="room" data-room-type="Exótica">
-                        <img src="/Images/Habitaciones/Exotica/exotica (1).jpg" alt="Habitación Exótica">
+                        <img src="../Images/Habitaciones/Exotica/exotica (1).jpg" alt="Habitación Exótica">
                         <p>Exótica</p>
                     </div>
                 </li>
                 <li>
                     <div class="room" data-room-type="Nova Plus">
-                        <img src="/Images/Habitaciones/Nova Plus/novaplus (1).JPG" alt="Habitación Nova Plus">
+                        <img src="../Images/Habitaciones/Nova Plus/novaplus (1).JPG" alt="Habitación Nova Plus">
                         <p>Nova Plus</p>
                     </div>
                 </li>
                 <li>
                     <div class="room" data-room-type="Tentacion">
-                        <img src="/Images/Habitaciones/Tentacion/tentacion (1).jpg" alt="Habitación Tentación">
+                        <img src="../Images/Habitaciones/Tentacion/tentacion (1).jpg" alt="Habitación Tentación">
                         <p>Tentación</p>
                     </div>
                 </li>
@@ -103,13 +103,13 @@
                       <div class="col-sm-6 col-md-4 item">
                         <h3>Nosotros</h3>
                         <ul>
-                            <li><a href="/menu-items/habs.html">Habitaciones</a></li>
-                            <li><a href="/menu-items/servicios.html">Servicios</a></li>
-                            <li><a href="/menu-items/contacto.html">Contacto</a></li>
+                            <li><a href="/Teclab_Project/menu-items/habs.html">Habitaciones</a></li>
+                            <li><a href="/Teclab_Project/menu-items/servicios.html">Servicios</a></li>
+                            <li><a href="/Teclab_Project/menu-items/contacto.html">Contacto</a></li>
                         </ul>
                       </div>
                       <div class="col-sm-6 col-md-4 item">
-                          <a href="/menu-items/contacto.html"> 
+                          <a href="/Teclab_Project/menu-items/contacto.html"> 
                             <h3>Ubicación</h3>
                             <p>
                               Av. Don Julio Centeno, Zona Industrial Castillito, 
