--- a/menu-items/habs.html
+++ b/menu-items/habs.html
@@ -46,7 +46,7 @@
                 </li>
                 <li>
                     <div class="room" data-room-type="Oriental">
-                        <img src="../Images/Habitaciones/Oriental/oriental (1).png" alt="Habitación Oriental">
+                        <img src="./Images/Habitaciones/Oriental/oriental (1).png" alt="Habitación Oriental">
                         <p>Oriental</p>
                     </div>
                 </li>
