--- a/menu-items/habs.html
+++ b/menu-items/habs.html
@@ -28,7 +28,7 @@
             <ul class="room-grid">
                 <li>
                     <div class="room" data-room-type="Nupcial">
-                        <img src="../Images/Habitaciones/Nupcial/nupcial (1).jpg" alt="Habitación Nupcial">
+                        <img src="/Images/Habitaciones/Nupcial/nupcial (1).jpg" alt="Habitación Nupcial">
                         <p>Nupcial</p>
                     </div>
                 </li>
@@ -46,7 +46,7 @@
                 </li>
                 <li>
                     <div class="room" data-room-type="Oriental">
-                        <img src="./Images/Habitaciones/Oriental/oriental (1).png" alt="Habitación Oriental">
+                        <img src="../Images/Habitaciones/Oriental/oriental (1).png" alt="Habitación Oriental">
                         <p>Oriental</p>
                     </div>
                 </li>
