--- a/menu-items/habs.html
+++ b/menu-items/habs.html
@@ -28,7 +28,7 @@
             <ul class="room-grid">
                 <li>
                     <div class="room" data-room-type="Nupcial">
-                        <img src="/Images/Habitaciones/Nupcial/nupcial (1).jpg" alt="Habitación Nupcial">
+                        <img src="../Images/Habitaciones/Nupcial/nupcial (1).jpg" alt="Habitación Nupcial">
                         <p>Nupcial</p>
                     </div>
                 </li>
