--- a/menu-items/habs.html
+++ b/menu-items/habs.html
@@ -52,7 +52,7 @@
                 </li>
                 <li>
                     <div class="room" data-room-type="Oasis">
-                        <img src="../Images/Habitaciones/Oasis/oasis (1).jpg" alt="Habitación Oasis">
+                        <img src="../Images/Habitaciones/Oasis/oasis (1).JPG" alt="Habitación Oasis">
                         <p>Oasis</p>
                     </div>
                 </li>
