--- a/menu-items/habs.html
+++ b/menu-items/habs.html
@@ -58,25 +58,25 @@
                 </li>
                 <li>
                     <div class="room" data-room-type="Nova">
-                        <img src="../Images/Habitaciones/Nova/nova (1).jpg" alt="Habitación Nova">
+                        <img src="../Images/Habitaciones/Nova/nova (1).JPG" alt="Habitación Nova">
                         <p>Nova</p>
                     </div>
                 </li>
                 <li>
                     <div class="room" data-room-type="Salvaje">
-                        <img src="../Images/Habitaciones/Salvaje/salvaje (4).jpg" alt="Habitación Salvaje">
+                        <img src="../Images/Habitaciones/Salvaje/salvaje (4).JPG" alt="Habitación Salvaje">
                         <p>Salvaje</p>
                     </div>
                 </li>
                 <li>
                     <div class="room" data-room-type="Mistyka">
-                        <img src="../Images/Habitaciones/Mistyka/mistyka (1).jpg" alt="Habitación Mistyka">
+                        <img src="../Images/Habitaciones/Mistyka/mistyka (1).JPG" alt="Habitación Mistyka">
                         <p>Mistyka</p>
                     </div>
                 </li>
                 <li>
                     <div class="room" data-room-type="Exótica">
-                        <img src="../Images/Habitaciones/Exotica/exotica (1).jpg" alt="Habitación Exótica">
+                        <img src="../Images/Habitaciones/Exotica/exotica (1).JPG" alt="Habitación Exótica">
                         <p>Exótica</p>
                     </div>
                 </li>
@@ -88,7 +88,7 @@
                 </li>
                 <li>
                     <div class="room" data-room-type="Tentacion">
-                        <img src="../Images/Habitaciones/Tentacion/tentacion (1).jpg" alt="Habitación Tentación">
+                        <img src="../Images/Habitaciones/Tentacion/tentacion (1).JPG" alt="Habitación Tentación">
                         <p>Tentación</p>
                     </div>
                 </li>
