--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="header">
         <img src="Images/logo/hsd-icon.svg" class="logo">
         <ul class="menu">
-            <li class="item" data-href="/Teclab_Project/index.html">Inicio</li>
+            <li class="item" data-href="/Teclab_Project/">Inicio</li>
             <li class="item" data-href="/Teclab_Project/menu-items/habs.html">Habitaciones</li>
             <li class="item" data-href="/Teclab_Project/menu-items/servicios.html">Servicios</li>
             <li class="item" data-href="/Teclab_Project/menu-items/contacto.html">Contacto</li>
